--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -2,7 +2,7 @@
 # See https://pre-commit.com/hooks.html for more hooks
 repos:
 - repo: https://github.com/pre-commit/pre-commit-hooks
-  rev: v2.4.0
+  rev: v4.0.1
   hooks:
     - id: trailing-whitespace
     - id: end-of-file-fixer
@@ -16,11 +16,16 @@ repos:
     # - id: no-commit-to-branch
     #   args: [--branch, master]
 - repo: https://github.com/ambv/black
-  rev: stable
+  rev: 21.7b0
   hooks:
     - id: black
       language_version: python3.8
 - repo: https://gitlab.com/pycqa/flake8
-  rev: 3.7.9
+  rev: 3.9.2
   hooks:
     - id: flake8
+- repo: https://github.com/pre-commit/mirrors-mypy
+  rev: v0.910
+  hooks:
+    - id: mypy
+      args: [--no-strict-optional]
