Create a new directory for common Tool, and add PDF operator in it

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -28,4 +28,4 @@ repos:
   rev: v0.910
   hooks:
     - id: mypy
-      args: [--no-strict-optional]
+      args: [--no-strict-optional, --ignore-missing-imports]
