--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,8 @@
 [flake8]
 max-line-length = 88
-format = %(path)s - %(row)d:%(col)-6d  [%(code)s] %(text)s
+; # note that format customization would trigger "Bad value sustituion" by setup.py
+; # hence, it's not recommended if such customization is not necessary
+; format = %(path)s - %(row)d:%(col)-6d  [%(code)s] %(text)s
 
 # enable and config McCabe complexity checker
 max-complexity = 10
@@ -10,3 +12,7 @@ max-complexity = 10
 # E121: continuation line under-indented for hanging indent
 # W503 line break before binary operator
 ignore = E121, W503
+
+[radon]
+cc_min = B
+mi_min = A
