Add contents for List Comprehension, Profiling, JSON serialization, Regex; Create the tool for emails

--- a/Python/Tool/medium/collected.yaml
+++ b/Python/Tool/medium/collected.yaml
@@ -12,10 +12,13 @@ Technique:
     url: https://medium.com/bugbountywriteup/this-is-how-i-hacked-my-neighbors-computer-a823e2054d15
   - title: Persistent Python Backdoor
     url: https://medium.com/python-in-plain-english/persistent-python-backdoor-447814ed6b93
+Privacy:
   - title: Build Your Own VPN Using GCP
     url: https://betterprogramming.pub/build-your-own-vpn-using-google-cloud-platform-2e22b0a7d489
   - title: How to Make a Cloud-Free Security Camera for $3
     url: https://debugger.medium.com/how-to-make-a-cloud-free-security-camera-for-3-a2f2b467bfa5
+  - title: How to get off Google and redo your personal tech stack
+    url: https://medium.com/swlh/how-to-get-off-google-and-redo-your-personal-tech-stack-9327ef12f3e0
 Life:
   - title: 9 micro habits
     url: https://medium.com/live-your-life-on-purpose/9-micro-habits-that-will-completely-change-your-life-in-a-year-6bd291aee5c1
