--- a/dev/requirements.txt
+++ b/dev/requirements.txt
@@ -1,5 +1,6 @@
 # -*- coding: utf-8 -*-
 --index-url https://pypi.org/simple
 # --extra-index-url https://test.pypi.org/simple
+mypy>=0.910
 pre-commit~=2.10
 radon>=5.1.0
