--- a/Python/Projects/Concurrency/requirements.txt
+++ b/Python/Projects/Concurrency/requirements.txt
@@ -1,4 +1,6 @@
 # -*- coding: utf-8 -*-
 --index-url https://pypi.org/simple
+beautifulsoup4>=4.9.3
 colorama>=0.4.4     # for color printing
 glances>=3.2.3      # for memory monitoring
+requests>=2.26.0
