--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,70 +1,72 @@
+%YAML 1.2
+---
 # See https://pre-commit.com for more information
 # See https://pre-commit.com/hooks.html for more hooks
 repos:
 - repo: https://github.com/pre-commit/pre-commit-hooks
   rev: v4.0.1
   hooks:
-    - id: trailing-whitespace
-    - id: end-of-file-fixer
-    - id: check-added-large-files
-    - id: check-case-conflict
-    - id: check-docstring-first
-    - id: check-json
-    - id: check-yaml
-    - id: check-merge-conflict
-    - id: detect-private-key
-    # - id: no-commit-to-branch
-    #   args: [--branch, master]
+  - id: trailing-whitespace
+  - id: end-of-file-fixer
+  - id: check-added-large-files
+  - id: check-case-conflict
+  - id: check-docstring-first
+  - id: check-json
+  - id: check-yaml
+  - id: check-merge-conflict
+  - id: detect-private-key
+  # - id: no-commit-to-branch
+  #   args: [--branch, master]
 - repo: https://github.com/ambv/black
   rev: 21.7b0
   hooks:
-    - id: black
-      language_version: python3.8
+  - id: black
+    language_version: python3.8
 - repo: https://github.com/pycqa/isort
   rev: 5.9.0
   hooks:
-    - id: isort
-      args:
-        - -m=VERTICAL_HANGING_INDENT
-        # specify the directory for --from-first is mandatory
-        - --from-first=.
-        - --only-sections
-        # need the trailing comma to avoid the conflict with black's auto-formatting
-        - --trailing-comma
+  - id: isort
+    args:
+    - -m=VERTICAL_HANGING_INDENT
+    # specify the directory for --from-first is mandatory
+    - --from-first=.
+    - --only-sections
+    # need the trailing comma to avoid the conflict with black's auto-formatting
+    - --trailing-comma
 - repo: https://gitlab.com/pycqa/flake8
   rev: 3.9.2
   hooks:
-    - id: flake8
+  - id: flake8
 - repo: https://github.com/pre-commit/mirrors-mypy
   rev: v0.910
   hooks:
-    - id: mypy
-      # args:
-      #   - --no-strict-optional
-      #   - --ignore-missing-imports
-      #   - --namespace-packages
-      #   - --explicit-package-bases
+  - id: mypy
+    # args:
+    # - --no-strict-optional
+    # - --ignore-missing-imports
+    # - --namespace-packages
+    # - --explicit-package-bases
 - repo: https://github.com/pre-commit/mirrors-pylint
   rev: v3.0.0a3
   hooks:
-    - id: pylint
-      args:
-        - --disable=C0301 # (line-too-long)
-        - --disable=E0401 # (import-error)
-        - --disable=R0801 # (duplicate-code)
-        - --disable=R1711 # (useless-return)
-        # note that the pattern below is not feasible:
-        # "(?:(?P<custom>)|(?P<snake>([^\\W\\dA-Z][^\\WA-Z]{2,}|_[^\\WA-Z]*|__[^\\WA-Z\\d_][^\\WA-Z]+__)))$"
-        - --variable-rgx=(?:(?P<custom>([^\W\dA-Z][^\WA-Z]{1,}|_[^\WA-Z]*|__[^\WA-Z\d_][^\WA-Z]+__)))$
-        - --include-naming-hint=y
+  - id: pylint
+    args:
+    - --disable=C0301 # (line-too-long)
+    - --disable=E0401 # (import-error)
+    - --disable=R0801 # (duplicate-code)
+    - --disable=R1711 # (useless-return)
+    # note that the pattern below is not feasible:
+    # "(?:(?P<custom>)|(?P<snake>([^\\W\\dA-Z][^\\WA-Z]{2,}|_[^\\WA-Z]*|__[^\\WA-Z\\d_][^\\WA-Z]+__)))$"
+    - --variable-rgx=(?:(?P<custom>([^\W\dA-Z][^\WA-Z]{1,}|_[^\WA-Z]*|__[^\WA-Z\d_][^\WA-Z]+__)))$
+    - --include-naming-hint=y
 - repo: https://github.com/PyCQA/pydocstyle
   rev: 6.1.1
   hooks:
-    - id: pydocstyle
-      language_version: python3.8
+  - id: pydocstyle
+    language_version: python3.8
 - repo: https://github.com/PyCQA/bandit
   rev: 1.7.0
   hooks:
-    - id: bandit
-      args:
-        - -c=dev/bandit.yaml
+  - id: bandit
+    args:
+    - -c=dev/bandit.yaml
