Add printing to Python basics, fix the main script in Logging

--- a/mypy.ini
+++ b/mypy.ini
@@ -1,4 +1,8 @@
 [mypy]
 
+; no type info for the following third-party libraries
 [mypy-requests]
+ignore_missing_imports = True
+
+[mypy-yaml]
 ignore_missing_imports = True
