--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -18,7 +18,7 @@ repos:
   # - id: no-commit-to-branch
   #   args: [--branch, master]
 - repo: https://github.com/ambv/black
-  rev: 21.7b0
+  rev: 22.3.0
   hooks:
   - id: black
     language_version: python3.8
