Complement draft and merge features to PDF tool

--- a/Python/Tool/Makefile
+++ b/Python/Tool/Makefile
@@ -1,5 +1,14 @@
 
-run-pdf:
+run-pdf-draft:
+	python -m pdf \
+		--operation draft
+
+run-pdf-split:
 	python -m pdf \
 		--operation split \
 		--name "pdf/sample.pdf"
+
+run-pdf-merge:
+	python -m pdf \
+		--operation merge \
+		--input "pdf/input"
