Add SHA256 calculation for FakeFilesystem example

--- a/Python/Projects/0_Example/Makefile
+++ b/Python/Projects/0_Example/Makefile
@@ -25,6 +25,8 @@ install: clean uninstall
 #
 #	python setup.py bdist_wheel upload -r local
 
+run:
+	python -m core
 
 ## development
 prune: clean
