Complement Make recipe to the PDF operation tool

--- a/Python/Tool/Makefile
+++ b/Python/Tool/Makefile
@@ -1,4 +1,5 @@
 
+# pdf operations
 run-pdf-draft:
 	python -m pdf \
 		--operation draft
@@ -6,9 +7,44 @@ run-pdf-draft:
 run-pdf-split:
 	python -m pdf \
 		--operation split \
-		--name "pdf/sample.pdf"
+		--name "pdf/input/sample.pdf"
 
 run-pdf-merge:
 	python -m pdf \
 		--operation merge \
 		--input "pdf/input"
+
+run-pdf-extract:
+	python -m pdf \
+		--operation extract \
+		--name "pdf/input/sample.pdf"
+
+run-pdf-rotate:
+	python -m pdf \
+		--operation rotate \
+		--name "pdf/input/sample.pdf"
+
+run-pdf-watermark:
+	python -m pdf \
+		--operation watermark \
+		--name "pdf/input/sample.pdf"
+
+run-pdf-text:
+	python -m pdf \
+		--operation text \
+		--name "pdf/input/sample.pdf"
+
+run-pdf-crop:
+	python -m pdf \
+		--operation crop \
+		--name "pdf/input/sample.pdf"
+
+run-pdf-encrypt:
+	python -m pdf \
+		--operation encrypt \
+		--name "pdf/input/sample.pdf"
+
+run-pdf-decrypt:
+	python -m pdf \
+		--operation decrypt \
+		--name "pdf/input/encrypted.pdf"
