--- a/Python/Projects/0_Example/docker-compose.yaml
+++ b/Python/Projects/0_Example/docker-compose.yaml
@@ -5,6 +5,7 @@ services:
     build:
       context: .
       dockerfile: dev/test.dockerfile
+    user: root
     command: python -m
       pytest /app/tests
       --cov=/app/core
