--- a/mypy.ini
+++ b/mypy.ini
@@ -1,6 +1,9 @@
 [mypy]
 
 ; no type info for the following third-party libraries
+[mypy-paramiko]
+ignore_missing_imports = True
+
 [mypy-requests]
 ignore_missing_imports = True
 
