Update pre-commit plugins, enhance the Connection project

--- a/mypy.ini
+++ b/mypy.ini
@@ -1,7 +1,7 @@
 [mypy]
 
 ; no type info for the following third-party libraries
-[mypy-paramiko]
+[mypy-paramiko.*]
 ignore_missing_imports = True
 
 [mypy-requests]
