--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,7 +4,7 @@
 # See https://pre-commit.com/hooks.html for more hooks
 repos:
 - repo: https://github.com/pre-commit/pre-commit-hooks
-  rev: v4.0.1
+  rev: v4.5.0
   hooks:
   - id: trailing-whitespace
   - id: end-of-file-fixer
@@ -18,27 +18,29 @@ repos:
   # - id: no-commit-to-branch
   #   args: [--branch, master]
 - repo: https://github.com/ambv/black
-  rev: 22.3.0
+  rev: 23.9.1
   hooks:
   - id: black
-    language_version: python3.8
+    language_version: python3
 - repo: https://github.com/pycqa/isort
-  rev: 5.9.0
+  rev: 5.12.0
   hooks:
   - id: isort
     args:
     - -m=VERTICAL_HANGING_INDENT
     # specify the directory for --from-first is mandatory
-    - --from-first=.
+    - --from-first
     - --only-sections
     # need the trailing comma to avoid the conflict with black's auto-formatting
     - --trailing-comma
-- repo: https://gitlab.com/pycqa/flake8
-  rev: 3.9.2
+- repo: https://github.com/pycqa/flake8
+  rev: 6.1.0
   hooks:
   - id: flake8
+    args:
+    - --max-line-length=88
 - repo: https://github.com/pre-commit/mirrors-mypy
-  rev: v0.910
+  rev: v1.5.1
   hooks:
   - id: mypy
     # args:
@@ -47,7 +49,7 @@ repos:
     # - --namespace-packages
     # - --explicit-package-bases
 - repo: https://github.com/pre-commit/mirrors-pylint
-  rev: v3.0.0a3
+  rev: v3.0.0a5
   hooks:
   - id: pylint
     args:
@@ -60,12 +62,12 @@ repos:
     - --variable-rgx=(?:(?P<custom>([^\W\dA-Z][^\WA-Z]{1,}|_[^\WA-Z]*|__[^\WA-Z\d_][^\WA-Z]+__)))$
     - --include-naming-hint=y
 - repo: https://github.com/PyCQA/pydocstyle
-  rev: 6.1.1
+  rev: 6.3.0
   hooks:
   - id: pydocstyle
-    language_version: python3.8
+    language_version: python3
 - repo: https://github.com/PyCQA/bandit
-  rev: 1.7.0
+  rev: 1.7.5
   hooks:
   - id: bandit
     args:
