--- a/Python/Projects/Testing/requirements.txt
+++ b/Python/Projects/Testing/requirements.txt
@@ -1,10 +1,8 @@
 # -*- coding: utf-8 -*-
 --index-url https://pypi.org/simple
 boto3~=1.15
-moto~=1.3.16
-pandas>=1.1
-pyfakefs>=5.0.0
-pytest~=6.2
-pytest-mock~=3.6
-pyyaml~=5.4
+moto~=4.2.13
+pandas~=2.1.3
+pyodbc~=5.0.1
+pyyaml~=6.0.1
 requests~=2.25
