Solidify the test used to check SFTP downloading

--- a/dev/mypy.ini
+++ b/dev/mypy.ini
@@ -1,7 +1,22 @@
 [mypy]
 
 ; no type info for the following third-party libraries
+[mypy-boto3]
+ignore_missing_imports = True
+
+[mypy-pandas]
+ignore_missing_imports = True
+
 [mypy-paramiko.*]
+ignore_missing_imports = True
+
+[mypy-pyfakefs.fake_filesystem]
+ignore_missing_imports = True
+
+[mypy-pytest]
+ignore_missing_imports = True
+
+[mypy-pytest_mock]
 ignore_missing_imports = True
 
 [mypy-requests]
