--- a/dev/requirements.txt
+++ b/dev/requirements.txt
@@ -2,5 +2,6 @@
 --index-url https://pypi.org/simple
 # --extra-index-url https://test.pypi.org/simple
 mypy>=0.910
-pre-commit~=2.10
+pre-commit>=3.4.0
+pyfakefs>=5.0.0
 radon>=5.1.0
