--- a/Python/Projects/Boilerplate/.pre-commit-config.yaml
+++ b/Python/Projects/Boilerplate/.pre-commit-config.yaml
@@ -4,7 +4,7 @@
 # See https://pre-commit.com/hooks.html for more hooks
 repos:
 - repo: https://github.com/pre-commit/pre-commit-hooks
-  rev: v4.0.1
+  rev: v4.5.0
   hooks:
   - id: trailing-whitespace
   - id: end-of-file-fixer
@@ -18,52 +18,59 @@ repos:
   # - id: no-commit-to-branch
   #   args: [--branch, master]
 - repo: https://github.com/ambv/black
-  rev: 21.7b0
+  rev: 24.1.0
   hooks:
   - id: black
-    language_version: python3.8
+    language_version: python3
 - repo: https://github.com/pycqa/isort
-  rev: 5.9.0
+  rev: 5.13.2
   hooks:
   - id: isort
     args:
     - -m=VERTICAL_HANGING_INDENT
     # specify the directory for --from-first is mandatory
-    - --from-first=.
+    - --from-first
     - --only-sections
     # need the trailing comma to avoid the conflict with black's auto-formatting
     - --trailing-comma
-- repo: https://gitlab.com/pycqa/flake8
-  rev: 3.9.2
+- repo: https://github.com/pycqa/flake8
+  rev: 7.0.0
   hooks:
   - id: flake8
+    args:
+    - --max-line-length=88
 - repo: https://github.com/pre-commit/mirrors-mypy
-  rev: v0.910
+  rev: v1.8.0
   hooks:
   - id: mypy
     args:
-    - --no-strict-optional
+    - --config-file=dev/mypy.ini
+    # - --no-strict-optional
     # - --ignore-missing-imports
     # - --namespace-packages
     # - --explicit-package-bases
+    additional_dependencies: [types-all]
 - repo: https://github.com/pre-commit/mirrors-pylint
-  rev: v3.0.0a3
+  rev: v3.0.0a5
   hooks:
   - id: pylint
     args:
+    - --rcfile=dev/.pylintrc
     - --disable=C0301 # (line-too-long)
     - --disable=E0401 # (import-error)
+    - --disable=R0801 # (duplicate-code)
+    - --disable=R1711 # (useless-return)
     # note that the pattern below is not feasible:
     # "(?:(?P<custom>)|(?P<snake>([^\\W\\dA-Z][^\\WA-Z]{2,}|_[^\\WA-Z]*|__[^\\WA-Z\\d_][^\\WA-Z]+__)))$"
-    - --variable-rgx=(?:(?P<custom>(df|[^\W\dA-Z][^\WA-Z]{2,}|_[^\WA-Z]*|__[^\WA-Z\d_][^\WA-Z]+__)))$
+    - --variable-rgx=(?:(?P<custom>([^\W\dA-Z][^\WA-Z]{1,}|_[^\WA-Z]*|__[^\WA-Z\d_][^\WA-Z]+__)))$
     - --include-naming-hint=y
 - repo: https://github.com/PyCQA/pydocstyle
-  rev: 6.1.1
+  rev: 6.3.0
   hooks:
   - id: pydocstyle
-    language_version: python3.8
+    language_version: python3
 - repo: https://github.com/PyCQA/bandit
-  rev: 1.7.0
+  rev: 1.7.7
   hooks:
   - id: bandit
     args:
