--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -22,6 +22,7 @@ repos:
   hooks:
   - id: black
     language_version: python3
+    exclude: 'Python/Projects/Boilerplate/Sample Module/'
 - repo: https://github.com/pycqa/isort
   rev: 5.13.2
   hooks:
