--- a/Python/Projects/Boilerplate/Data Pipeline/pyproject.toml
+++ b/Python/Projects/Boilerplate/Data Pipeline/pyproject.toml
@@ -17,6 +17,7 @@ packages = [
 [tool.poetry.dependencies]
 python = "^3.10"
 poethepoet = "0.24.4"
+pyodbc = "^5.1.0"
 PyYAML = "^6.0.1"
 
 [tool.poetry.group.dev.dependencies]
