--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -22,7 +22,18 @@ repos:
   hooks:
   - id: black
     language_version: python3
-    exclude: 'Python/Projects/Boilerplate/Sample Module/'
+    exclude: "Python/Projects/Boilerplate/Sample Module/"
+- repo: https://github.com/astral-sh/ruff-pre-commit
+  rev: v0.2.2
+  hooks:
+  - id: ruff-format
+    args:
+    - --config
+    - dev/ruff.toml
+  - id: ruff
+    args:
+    - --config
+    - dev/ruff.toml
 - repo: https://github.com/pycqa/isort
   rev: 5.13.2
   hooks:
@@ -34,23 +45,23 @@ repos:
     - --only-sections
     # need the trailing comma to avoid the conflict with black's auto-formatting
     - --trailing-comma
-- repo: https://github.com/pycqa/flake8
-  rev: 7.0.0
-  hooks:
-  - id: flake8
-    args:
-    - --max-line-length=88
-- repo: https://github.com/pre-commit/mirrors-mypy
-  rev: v1.8.0
-  hooks:
-  - id: mypy
-    args:
-    - --config-file=dev/mypy.ini
-    # - --no-strict-optional
-    # - --ignore-missing-imports
-    # - --namespace-packages
-    # - --explicit-package-bases
-    additional_dependencies: [types-all]
+# - repo: https://github.com/pycqa/flake8
+#   rev: 7.0.0
+#   hooks:
+#   - id: flake8
+#     args:
+#     - --max-line-length=88
+# - repo: https://github.com/pre-commit/mirrors-mypy
+#   rev: v1.8.0
+#   hooks:
+#   - id: mypy
+#     args:
+#     - --config-file=dev/mypy.ini
+#     # - --no-strict-optional
+#     # - --ignore-missing-imports
+#     # - --namespace-packages
+#     # - --explicit-package-bases
+#     additional_dependencies: [types-all]
 - repo: https://github.com/pre-commit/mirrors-pylint
   rev: v3.0.0a5
   hooks:
@@ -58,6 +69,7 @@ repos:
     args:
     - --rcfile=dev/.pylintrc
     - --disable=C0301 # (line-too-long)
+    - --disable=C2801 # (unnecessary-dunder-call)
     - --disable=E0401 # (import-error)
     - --disable=R0801 # (duplicate-code)
     - --disable=R1711 # (useless-return)
@@ -65,11 +77,11 @@ repos:
     # "(?:(?P<custom>)|(?P<snake>([^\\W\\dA-Z][^\\WA-Z]{2,}|_[^\\WA-Z]*|__[^\\WA-Z\\d_][^\\WA-Z]+__)))$"
     - --variable-rgx=(?:(?P<custom>([^\W\dA-Z][^\WA-Z]{1,}|_[^\WA-Z]*|__[^\WA-Z\d_][^\WA-Z]+__)))$
     - --include-naming-hint=y
-- repo: https://github.com/PyCQA/pydocstyle
-  rev: 6.3.0
-  hooks:
-  - id: pydocstyle
-    language_version: python3
+# - repo: https://github.com/PyCQA/pydocstyle
+#   rev: 6.3.0
+#   hooks:
+#   - id: pydocstyle
+#     language_version: python3
 - repo: https://github.com/PyCQA/bandit
   rev: 1.7.7
   hooks:
