--- a/dev/ruff.toml
+++ b/dev/ruff.toml
@@ -36,20 +36,19 @@ indent-width = 4
 target-version = "py310"
 
 [lint]
-# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`) codes by default.
-# https://docs.astral.sh/ruff/rules/
 select = [
     # "ALL", # all existing linter plugins
     "F", # Pyflakes
     "E", # pycodestyle - error
     "W", # pycodestyle - warning
-    # "C90", # mccabe
+    "C90", # mccabe
     # "I", # iSort
     "N", # pep8 Naming
     "D", # pydocstyle
-    # "S", # flake8-bandit
-    # "PL", # Pylint
+    "S", # flake8-bandit
+    "PL", # Pylint
 ]
+# https://docs.astral.sh/ruff/rules/
 ignore = []
 
 # Allow fix for all enabled rules (when `--fix`) is provided.
