--- a/dev/ruff.toml
+++ b/dev/ruff.toml
@@ -42,14 +42,16 @@ select = [
     "E", # pycodestyle - error
     "W", # pycodestyle - warning
     "C90", # mccabe
-    # "I", # iSort
+    "I", # iSort
     "N", # pep8 Naming
     "D", # pydocstyle
     "S", # flake8-bandit
     "PL", # Pylint
 ]
 # https://docs.astral.sh/ruff/rules/
-ignore = []
+ignore = [
+    "PLR1711", # useless-return
+]
 
 # Allow fix for all enabled rules (when `--fix`) is provided.
 fixable = ["ALL"]
@@ -58,6 +60,33 @@ unfixable = []
 # Allow unused variables when underscore-prefixed.
 dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
 
+# =============================================================================
+[lint.per-file-ignores]
+"**/tests/**" = [
+    "S101", # assert
+]
+
+# =============================================================================
+[lint.flake8-bandit]
+hardcoded-tmp-directory = []
+
+[lint.isort]
+case-sensitive = true
+force-sort-within-sections = false
+from-first = true
+# known-first-party = ["src"]
+known-local-folder = ["src", "tests"]
+no-lines-before = ["future", "standard-library"]
+no-sections = false
+order-by-type = false
+relative-imports-order = "closest-to-furthest"
+section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
+split-on-trailing-comma = true
+
+[lint.mccabe]
+# Flag errors (`C901`) whenever the complexity level exceeds 5.
+max-complexity = 6
+
 [lint.pycodestyle]
 max-line-length = 88
 max-doc-length = 88
@@ -65,12 +94,14 @@ max-doc-length = 88
 [lint.pydocstyle]
 convention = "google"
 
-[lint.isort]
-force-sort-within-sections = true
-from-first = true
-section-order = ["future", "standard-library", "first-party", "third-party", "local-folder"]
+[lint.pylint]
+max-args = 8
+max-bool-expr = 5
+max-branches = 12
+max-locals = 15
+max-nested-blocks = 5
 
-
+# =============================================================================
 [format]
 # Like Black, use double quotes for strings.
 quote-style = "double"
