--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -13,6 +13,8 @@ repos:
   - id: check-docstring-first
   - id: check-json
   - id: check-yaml
+    args:
+    - --allow-multiple-documents
   - id: check-merge-conflict
   - id: detect-private-key
   # - id: no-commit-to-branch
@@ -52,17 +54,17 @@ repos:
 #   - id: flake8
 #     args:
 #     - --max-line-length=88
-# - repo: https://github.com/pre-commit/mirrors-mypy
-#   rev: v1.8.0
-#   hooks:
-#   - id: mypy
-#     args:
-#     - --config-file=dev/mypy.ini
-#     # - --no-strict-optional
-#     # - --ignore-missing-imports
-#     # - --namespace-packages
-#     # - --explicit-package-bases
-#     additional_dependencies: [types-all]
+- repo: https://github.com/pre-commit/mirrors-mypy
+  rev: v1.8.0
+  hooks:
+  - id: mypy
+    args:
+    - --config-file=dev/mypy.ini
+    # - --no-strict-optional
+    # - --ignore-missing-imports
+    # - --namespace-packages
+    # - --explicit-package-bases
+    additional_dependencies: [types-all]
 # - repo: https://github.com/pre-commit/mirrors-pylint
 #   rev: v3.0.0a5
 #   hooks:
@@ -89,3 +91,14 @@ repos:
 #   - id: bandit
 #     args:
 #     - -c=dev/bandit.yaml
+- repo: https://github.com/tonybaloney/wily
+  rev: 1.25.0
+  hooks:
+  - id: wily
+    name: wily
+    verbose: true
+    language: python
+    additional_dependencies: [wily]
+    entry: wily diff
+    args:
+    - --no-detail
