Integrate local database into DataPipeline project

--- a/Python/Projects/Data Pipeline/Makefile
+++ b/Python/Projects/Data Pipeline/Makefile
@@ -1,4 +1,9 @@
 
+init-local-env:
+	docker-compose -f dev/docker-compose.yaml --project-directory '${PWD}' up -d local-env database
+	# wait for database to be ready
+	sleep 20
+	docker exec -w /app/integration -it dp-local-env python setup_db.py
 
 unit-test:
 	poetry poe test
@@ -7,6 +12,6 @@ integration-test:
 	docker-compose -f dev/docker-compose.yaml --project-directory '${PWD}' up --exit-code-from ci ci
 	docker-compose -f dev/docker-compose.yaml --project-directory '${PWD}' rm -f ci
 
-cleanup-test:
+cleanup:
 	docker-compose -f dev/docker-compose.yaml down
-	docker system prune
+	echo y | docker system prune
