--- a/Python/Projects/Data Pipeline/integration/database.yaml
+++ b/Python/Projects/Data Pipeline/integration/database.yaml
@@ -2,6 +2,6 @@
 connection_string: "\
   DRIVER={FreeTDS};\
   SERVER=${LOCAL_SERVER},1433;\
-  UID=sa;\
+  UID=${DB_USER};\
   PWD=${DB_PASSWORD};\
 "
