--- a/dev/mypy.ini
+++ b/dev/mypy.ini
@@ -13,6 +13,9 @@ ignore_missing_imports = True
 [mypy-pyfakefs.fake_filesystem]
 ignore_missing_imports = True
 
+[mypy-pyodbc]
+ignore_missing_imports = True
+
 [mypy-pytest]
 ignore_missing_imports = True
 
