--- a/Python/Projects/Boilerplate/Poe/dev/ruff.toml
+++ b/Python/Projects/Boilerplate/Poe/dev/ruff.toml
@@ -115,3 +115,6 @@ skip-magic-trailing-comma = false
 
 # Like Black, automatically detect the appropriate line ending.
 line-ending = "auto"
+
+docstring-code-format = true
+docstring-code-line-length = 100
