--- a/dev/mypy.ini
+++ b/dev/mypy.ini
@@ -16,6 +16,9 @@ ignore_missing_imports = True
 [mypy-pyodbc]
 ignore_missing_imports = True
 
+[mypy-pytesseract]
+ignore_missing_imports = True
+
 [mypy-pytest]
 ignore_missing_imports = True
 
