--- a/Python/Projects/Boilerplate/Poe/poetry.toml
+++ b/Python/Projects/Boilerplate/Poe/poetry.toml
@@ -1,3 +1,6 @@
 
+[repositories.default_pypi]
+url = "https://upload.pypi.org/legacy/"
+
 [repositories.test_pypi]
 url = "https://test.pypi.org/simple"
