--- a/dev/mypy.ini
+++ b/dev/mypy.ini
@@ -28,5 +28,8 @@ ignore_missing_imports = True
 [mypy-requests]
 ignore_missing_imports = True
 
+[mypy-mysql]
+ignore_missing_imports = True
+
 [mypy-yaml]
 ignore_missing_imports = True
