--- a/.gitignore
+++ b/.gitignore
@@ -365,3 +365,7 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.toptal.com/developers/gitignore/api/java,venv,linux,macos,python,windows,virtualenv,jetbrains+all,visualstudiocode
+
+
+# Customization
+!local
